# promptify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
promptify_ai/: __init__.py  cli.py
scripts/: bump_minor.py  bump_patch.py
tests/: test_cli.py  test_promptify.py
