[project]
name = "promptify-ai"
version = "0.3.2"
description = "Gather files into a single prompt for LLM consumption"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "pyperclip>=1.8",]
[[project.authors]]
name = "Gianluca Giudice"
email = "gianlu.giudice@gmail.com"

[build-system]
requires = [ "setuptools>=61",]
build-backend = "setuptools.build_meta"

[project.scripts]
promptify = "promptify_ai.cli:main"
